// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Bootstrap/Dropdown Basic 1`] = `
<div
  className="dropdown "
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic Warning 1`] = `
<div
  className="dropdown "
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-warning  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic align right 1`] = `
<div
  className="dropdown "
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic custom style 1`] = `
<div
  className="dropdown "
  style={
    Object {
      "background": "red",
      "padding": "10px",
    }
  }
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic disabled 1`] = `
<div
  className="dropdown "
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled="disabed"
    onClick={null}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic isOpen 1`] = `
<div
  className="dropdown "
>
  <button
    aria-expanded={true}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
  <div
    className="dropdown-menu show "
  >
    <div
      className="col-sm-12"
    >
      <button
        className="btn btn-success  "
        disabled={null}
        onClick={[Function]}
        style={null}
        type="button"
      >
        All Done
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown List Content 1`] = `
<div
  className="dropdown "
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show list
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown List Content isOpen 1`] = `
<div
  className="dropdown "
>
  <button
    aria-expanded={true}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show list
     
    <span
      className="caret"
    />
  </button>
  <ul
    className="dropdown-menu show "
  >
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        1
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        2
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        3
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        4
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        5
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown List with long content 1`] = `
<div
  className="dropdown "
>
  <button
    aria-expanded={true}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show list
     
    <span
      className="caret"
    />
  </button>
  <ul
    className="dropdown-menu show "
  >
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        1
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        2
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        3
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        4
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        5
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        6
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        7
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        8
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        9
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        10
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        11
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        12
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        13
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        14
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        15
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        16
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        17
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        18
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        19
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        20
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        21
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        22
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        23
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        24
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        25
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        26
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        27
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        28
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        29
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        30
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        31
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        32
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        33
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        34
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        35
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        36
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        37
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        38
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        39
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        40
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown List with long content on long page 1`] = `
<div>
  <ul>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        1
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        2
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        3
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        4
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        5
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        6
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        7
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        8
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        9
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        10
      </a>
    </li>
  </ul>
  <div
    className="dropdown "
  >
    <button
      aria-expanded={true}
      aria-haspopup="true"
      className="btn btn-outline-secondary  dropdown-toggle"
      data-toggle="dropdown"
      disabled={null}
      onClick={[Function]}
      type="button"
    >
      Show list
       
      <span
        className="caret"
      />
    </button>
    <ul
      className="dropdown-menu show "
    >
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          1
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          2
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          3
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          4
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          5
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          6
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          7
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          8
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          9
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          10
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          11
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          12
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          13
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          14
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          15
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          16
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          17
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          18
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          19
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          20
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          21
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          22
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          23
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          24
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          25
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          26
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          27
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          28
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          29
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          30
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          31
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          32
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          33
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          34
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          35
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          36
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          37
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          38
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          39
        </a>
      </li>
      <li>
        <a
          href="#"
          onClick={[Function]}
        >
          Count: 
          40
        </a>
      </li>
    </ul>
  </div>
  <ul>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        1
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        2
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        3
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        4
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        5
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        6
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        7
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        8
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        9
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        10
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        11
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        12
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        13
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        14
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        15
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        16
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        17
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        18
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        19
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        20
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        21
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        22
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        23
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        24
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        25
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        26
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        27
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        28
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        29
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        30
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        31
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        32
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        33
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        34
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        35
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        36
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        37
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        38
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        39
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        40
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        41
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        42
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        43
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        44
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        45
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        46
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        47
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        48
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        49
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        50
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        51
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        52
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        53
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        54
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        55
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        56
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        57
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        58
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        59
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Count: 
        60
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button 1`] = `
<div
  className="dropdown "
>
  <button
    className="btn btn-outline-secondary  "
    disabled={null}
    onClick={[Function]}
    style={null}
    type="button"
  >
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="octicon"
      height={16}
      role="img"
      style={
        Object {
          "display": "inline-block",
          "fill": "currentColor",
          "userSelect": "none",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 12 16"
      width={12}
    >
      <path
        d="M0 5l6 6 6-6H0z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="sr-only"
    >
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button w/ Color 1`] = `
<div
  className="dropdown "
>
  <button
    className="btn btn-success  "
    disabled={null}
    onClick={[Function]}
    style={null}
    type="button"
  >
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-success  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="octicon"
      height={16}
      role="img"
      style={
        Object {
          "display": "inline-block",
          "fill": "currentColor",
          "userSelect": "none",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 12 16"
      width={12}
    >
      <path
        d="M0 5l6 6 6-6H0z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="sr-only"
    >
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button w/ Glyph 1`] = `
<div
  className="dropdown "
>
  <button
    className="btn btn-outline-secondary  "
    disabled={null}
    onClick={[Function]}
    style={null}
    type="button"
  >
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="octicon"
      height={16}
      role="img"
      style={
        Object {
          "display": "inline-block",
          "fill": "currentColor",
          "userSelect": "none",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 14 16"
      width={14}
    >
      <path
        d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="sr-only"
    >
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button w/ List Content 1`] = `
<div
  className="dropdown "
>
  <button
    className="btn btn-outline-secondary  "
    disabled={null}
    onClick={[Function]}
    style={null}
    type="button"
  >
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-outline-secondary  dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="octicon"
      height={16}
      role="img"
      style={
        Object {
          "display": "inline-block",
          "fill": "currentColor",
          "userSelect": "none",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 12 16"
      width={12}
    >
      <path
        d="M0 5l6 6 6-6H0z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="sr-only"
    >
      expand
    </span>
  </button>
</div>
`;
